--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "click-notes",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://obsessive-coder.github.io/click-notes",
+  "homepage": "https://obsessive-coder.github.io/click-notes/",
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^1.2.32",
     "@fortawesome/free-regular-svg-icons": "^5.15.1",
